Fix current-item indicator in combination with the cleanlooks style

Thanks to Christoph Feck for the hint.

BUG: 290536
FIXED-IN: 4.8.0